Bug 761274 - Work around buffer sizing bug in PulseAudio ALSA plugin.  r=doublec