media/libcubeb/src/cubeb_audiounit.c
@@ -87,6 +87,12 @@ cubeb_init(cubeb ** context, char const * context_name)
   return CUBEB_OK;
 }
 
+char const *
+cubeb_get_backend_id(cubeb * ctx)
+{
+  return "audiounit";
+}
+
 void
 cubeb_destroy(cubeb * ctx)
 {
