media/libcubeb/src/cubeb_winmm.c
@@ -1,5 +1,5 @@
 /*
- * Copyright Â© 2011 Mozilla Foundation
+ * Copyright Â© 2011 Mozilla Foundation
  *
  * This program is made available under an ISC-style license.  See the
  * accompanying file LICENSE for details.
@@ -123,6 +123,7 @@ cubeb_refill_stream(cubeb_stream * stm)
   got = stm->data_callback(stm, stm->user_ptr, hdr->lpData, wanted);
   EnterCriticalSection(&stm->lock);
   if (got < 0) {
+    LeaveCriticalSection(&stm->lock);
     /* XXX handle this case */
     assert(0);
     return;
@@ -224,6 +225,12 @@ cubeb_init(cubeb ** context, char const * context_name)
   *context = ctx;
 
   return CUBEB_OK;
+}
+
+char const *
+cubeb_get_backend_id(cubeb * ctx)
+{
+  return "winmm";
 }
 
 void
